Filtrelemeye değişti veritabanı ve görseller değişti
